<resources>
    <string name="app_name">i miss you</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="how_to_apologize_1">How to apologize #1</string>
    <string name="how_to_apologize_2">How to apologize #2</string>
    <string name="how_to_apologise_3">How to apologise #3</string>
    <string name="how_to_apologize_4">How to apologize #4</string>
    <string name="how_to_apologize_5">How to apologize #5</string>
    <string name="own_up_and_apologize_no_matter_how_hard_it_seems">Own Up and apologize,no matter how hard it seems</string>
    <string name="sorry">SORRY</string>
    <string name="_100_thara_khlini_still_sorry">100 thara khlini still..sorry</string>
    <string name="accept_full_responsibility_of_events_and_say_sorry">Accept full responsibility of events,and say sorry</string>
    <string name="han_han_mg_mori_bhul_thila_sorry_my_ass">Han han mg mori bhul thila...sorry my ass</string>
    <string name="kill_that_ass">KILL THAT ASS</string>
</resources>
