<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sorry"
            android:icon="@drawable/sad"
            android:title="@string/how_to_apologize_1" />
        <item
            android:id="@+id/nav_sorry2"
            android:icon="@drawable/sad"
            android:title="@string/how_to_apologize_2" />
        <item
            android:id="@+id/nav_sorry3"
            android:icon="@drawable/sad"
            android:title="@string/how_to_apologise_3" />
        <item
            android:id="@+id/nav_sorry4"
            android:icon="@drawable/sad"
            android:title="@string/how_to_apologize_4" />

    </group>


</menu>
